[project]
name = "agin2025"
version = "0.1.0"
description = "ATGK Data Anonymization Tool - k-anonymity using Gorilla Optimization Algorithm with Fuzzy C-Means"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
atgk = "src.main:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
